fixing weird spacing issue in crud

--- a/css/style.css
+++ b/css/style.css
@@ -377,6 +377,6 @@ ul.tag li a {
 }
 
 #main-content {
-    padding-left: 50px;
+    margin-left: 225px;
 }
 
